# DumbbellProLog

./: .gitignore  Project Blueprint.md  README.md  build_and_deploy.sh  enable-webauthn.js  package-lock.json  package.json  ui_mockup.html
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  preview.yml
backend/: Cargo.toml  package-lock.json  package.json  vitest.config.ts
backend-rust/src/: ai.rs  types.rs
backend/src/: ai.rs  ai.ts  db.ts  index.ts  main.rs  types.rs  types.ts
backend/src/__tests__/: ai.test.ts  api.test.ts  db.test.ts  index.test.ts
cleanup-and-previews/: index.html  manifest.webmanifest  registerSW.js  sw.js
cleanup-and-previews/assets/: index-CMyTr61j.css  (+2 more)
cleanup-rust-and-docs/: index.html  sw.js
docs/: api.md  openapi.yaml
endless-mode/: index.html  sw.js
endless-mode-and-fixes/: index.html  sw.js
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
infra/: .env.example  package-lock.json  package.json
issue-60-header-overlap/: index.html  sw.js
issue-63-gym-dark-mode/: index.html  sw.js
issue-71-stats-3months-history/: index.html  sw.js
issue-72-dynamodb-ttl/: index.html  sw.js
issue-78-spot-training/: index.html  sw.js
issue-81-ts-backend/: index.html  sw.js
issues-all-at-once/: index.html  sw.js
maximize-ai-features/: index.html  sw.js
optimize-github-actions/: index.html  manifest.webmanifest  sw.js
premium-ux/: index.html  sw.js
shared/: schema.rs
training-skip/: index.html  sw.js
upgrade-node-24/: index.html  sw.js
(+102 files in other folders)
