[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
lambda_http = "1.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
aws-config = "1.5.15"
aws-sdk-dynamodb = "1.65.0"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
